{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 281,
  "lineage": "1a94749f-cc62-0cbc-a56b-5c80c5a204e9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377152273:internet-gateway/igw-0e7e691780141af40",
            "id": "igw-0e7e691780141af40",
            "owner_id": "891377152273",
            "vpc_id": "vpc-05ec259f5538bc540"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc-fast-food"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377152273:loadbalancer/app/fast-food-alb/53c7363eef0b6ee2",
            "arn_suffix": "app/fast-food-alb/53c7363eef0b6ee2",
            "desync_mitigation_mode": "defensive",
            "dns_name": "fast-food-alb-665532781.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:891377152273:loadbalancer/app/fast-food-alb/53c7363eef0b6ee2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "fast-food-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0bc9d229c0455e7cf"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-061562cae6423fdf9"
              },
              {
                "subnet_id": "subnet-0ef8fedb79b12dfd0"
              }
            ],
            "subnets": [
              "subnet-061562cae6423fdf9",
              "subnet-0ef8fedb79b12dfd0"
            ],
            "tags": {
              "Name": "fast-food-fiap-alb"
            },
            "tags_all": {
              "Name": "fast-food-fiap-alb"
            },
            "vpc_id": "vpc-05ec259f5538bc540",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sg-balancer-fast-food",
            "aws_subnet.fast-food-subnet-public1",
            "aws_subnet.fast-food-subnet-public2",
            "aws_vpc.vpc-fast-food"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ecs_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377152273:listener/app/fast-food-alb/53c7363eef0b6ee2/36dc60dfb3e29cbd",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:891377152273:targetgroup/ecs-fast-food-target-group/be87a917c5a608a3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:891377152273:listener/app/fast-food-alb/53c7363eef0b6ee2/36dc60dfb3e29cbd",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:891377152273:loadbalancer/app/fast-food-alb/53c7363eef0b6ee2",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.ecs_tg",
            "aws_security_group.sg-balancer-fast-food",
            "aws_subnet.fast-food-subnet-public1",
            "aws_subnet.fast-food-subnet-public2",
            "aws_vpc.vpc-fast-food"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ecs_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377152273:targetgroup/ecs-fast-food-target-group/be87a917c5a608a3",
            "arn_suffix": "targetgroup/ecs-fast-food-target-group/be87a917c5a608a3",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:891377152273:targetgroup/ecs-fast-food-target-group/be87a917c5a608a3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ecs-fast-food-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "fast-food-fiap"
            },
            "tags_all": {
              "Name": "fast-food-fiap"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05ec259f5538bc540"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc-fast-food"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377152273:route-table/rtb-03cad8b73b71beb9e",
            "id": "rtb-03cad8b73b71beb9e",
            "owner_id": "891377152273",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e7e691780141af40",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05ec259f5538bc540"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc-fast-food"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0543868b5d7da3a2a",
            "route_table_id": "rtb-03cad8b73b71beb9e",
            "subnet_id": "subnet-0ef8fedb79b12dfd0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt_public",
            "aws_subnet.fast-food-subnet-public1",
            "aws_vpc.vpc-fast-food"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d5f81d88c85c8f94",
            "route_table_id": "rtb-03cad8b73b71beb9e",
            "subnet_id": "subnet-061562cae6423fdf9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt_public",
            "aws_subnet.fast-food-subnet-public2",
            "aws_vpc.vpc-fast-food"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-balancer-fast-food",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377152273:security-group/sg-0bc9d229c0455e7cf",
            "description": "Security group do load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Podera sair pela sua origem, como entrou pela 80 sai pela 80",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bc9d229c0455e7cf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Tudo o que vai chegar no Security Group",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "balancers-fast-food-security-group",
            "name_prefix": "",
            "owner_id": "891377152273",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "balancers-fast-food-security-group",
              "project": "fiap-fast-food"
            },
            "tags_all": {
              "Name": "balancers-fast-food-security-group",
              "project": "fiap-fast-food"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ec259f5538bc540"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc-fast-food"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-cluster-fast-food",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377152273:security-group/sg-079488acf79134a56",
            "description": "SG utilizado nos clusters",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Podera sair pela sua origem",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-079488acf79134a56",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "So permitiremos a entrada caso a origem seja do balancers security group",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bc9d229c0455e7cf"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "cluster-fast-food-security-group",
            "name_prefix": "",
            "owner_id": "891377152273",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cluster-fast-food-security-group",
              "project": "fiap-fast-food"
            },
            "tags_all": {
              "Name": "cluster-fast-food-security-group",
              "project": "fiap-fast-food"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ec259f5538bc540"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sg-balancer-fast-food",
            "aws_vpc.vpc-fast-food"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "fast-food-subnet-private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377152273:subnet/subnet-06a12cc2fbfa5a6ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06a12cc2fbfa5a6ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377152273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fast-food-subnet-private1-us-east-1a"
            },
            "tags_all": {
              "Name": "fast-food-subnet-private1-us-east-1a"
            },
            "vpc_id": "vpc-05ec259f5538bc540"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc-fast-food"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "fast-food-subnet-private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377152273:subnet/subnet-0dcaf7a3092798789",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dcaf7a3092798789",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377152273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fast-food-subnet-private2-us-east-1b"
            },
            "tags_all": {
              "Name": "fast-food-subnet-private2-us-east-1b"
            },
            "vpc_id": "vpc-05ec259f5538bc540"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc-fast-food"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "fast-food-subnet-public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377152273:subnet/subnet-0ef8fedb79b12dfd0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef8fedb79b12dfd0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377152273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fast-food-subnet-public1-us-east-1a"
            },
            "tags_all": {
              "Name": "fast-food-subnet-public1-us-east-1a"
            },
            "vpc_id": "vpc-05ec259f5538bc540"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc-fast-food"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "fast-food-subnet-public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377152273:subnet/subnet-061562cae6423fdf9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-061562cae6423fdf9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377152273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fast-food-subnet-public2-us-east-1b"
            },
            "tags_all": {
              "Name": "fast-food-subnet-public2-us-east-1b"
            },
            "vpc_id": "vpc-05ec259f5538bc540"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc-fast-food"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-fast-food",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377152273:vpc/vpc-05ec259f5538bc540",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0902df45ab65cd2c5",
            "default_route_table_id": "rtb-02fd4ee9d5d222246",
            "default_security_group_id": "sg-0d82d19eff9d29421",
            "dhcp_options_id": "dopt-0244f4a42e0a3f4c4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05ec259f5538bc540",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02fd4ee9d5d222246",
            "owner_id": "891377152273",
            "tags": {
              "Name": "fast-food-vpc",
              "project": "fiap-fast-food"
            },
            "tags_all": {
              "Name": "fast-food-vpc",
              "project": "fiap-fast-food"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}